--- a/requirements.txt
+++ b/requirements.txt
@@ -9,12 +9,9 @@ Django==5.0.3
 django-allauth==0.61.1
 django-crispy-forms==2.1
 django-debug-toolbar==4.2.0
-gunicorn==21.2.0
 idna==3.4
 oauthlib==3.2.2
 packaging==23.1
-psycopg==3.1.18
-psycopg-binary==3.1.18
 pycparser==2.21
 PyJWT==2.6.0
 python3-openid==3.2.0
@@ -24,3 +21,8 @@ sqlparse==0.4.3
 typing_extensions==4.9.0
 urllib3==1.26.14
 whitenoise==6.6.0
+
+# docker requirements
+gunicorn==21.2.0
+psycopg==3.1.18
+psycopg-binary==3.1.18
